--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vite build",
-    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "@vant/touch-emulator": "^1.4.0",
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
+    "roboto-fontface": "*",
+    "tailwindcss": "^3.3.3",
     "vant": "^4.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -33,6 +38,9 @@
     "tailwindcss": "^3.3.3",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vuetify": "^3.4.0-alpha.1"
   }
 }
