--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "roboto-fontface": "*",
     "tailwindcss": "^3.3.3",
     "vant": "^4.7.2",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vuetify": "^3.0.0-beta.4",
     "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@types/node": "^20.8.9",
     "@vant/auto-import-resolver": "^1.0.1",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
@@ -34,13 +37,13 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.31",
+    "postcss-nested": "^6.0.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
-    "unplugin-auto-import": "^0.16.6",
+    "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vuetify": "^3.4.0-alpha.1"
+    "vue-cli-plugin-vuetify": "~2.5.8"
   }
 }
